src/main/java/com/crudtest/test/infra/errors/exceptions/UserNotFoundException.java
package com.crudtest.test.infra.errors.exceptions;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
